# PriceTracker

./: README.md  config.json  config_loader.py  emailer.py  main.py  price_history.csv  pyproject.toml  tracker.py  utils.py
